# data-structures

./: .gitignore  CMakeLists.txt  README.md  lista2.c  lista3.c
exercises/: list01.c  list02.c  list03.c  list1.c  list2.c  list3.c  lista-01.c  lista-02.c  lista-03.c  lista-05-1.c  lista-05-2.c
libraries/: BinarySearchTree.c  BinaryTree.c  Graph.c  LinkedList.c  Queue.c  Stack.c
libraries/headers/: BinarySearchTree.h  BinaryTree.h  Graph.h  LinkedList.h  Queue.h  Stack.h
libs/BTree/: BTree.c  BTree.h
libs/BinarySearchTree/: BinarySearchTree.c  BinarySearchTree.h
libs/BinaryTree/: BinaryTree.c  BinaryTree.h
libs/Graph/: Graph.c  Graph.h
libs/LinkedList/: LinkedList.c
libs/Queue/: Queue.c  Queue.h
libs/Stack/: Stack.c  Stack.h
src/: lista01.c  lista02.c  lista03.c  lista05-1.c  lista05-2.c  lista06.c
src/files/: matrix.txt  matrix_c.txt
